2008-09-20 Roman
- !/SYS: Default user on start QTCfg is made root. Used user directory configuration.
- !/SYS: Add programm information: PACKAGE_LICENSE, PACKAGE_DESCR, PACKAGE_AUTHOR and PACKAGE_SITE.
- !!:/SYS: Add unified sleep task function TSYS::taskSleep() and replaced sleep code into: TArchiveS, DAQ.BlockCalc, DAQ.JavaLikeCalc, DAQ.LogicLev
  DAQ.ModBus, DAQ.SNMP, DAQ.Siemens, DAQ.System, DAQ.Transporter and UI.VCAEngine.
- FIX:/DB/SQLite: High CPU load on work to read only DB is fixed.
- /UI/QTCfg, /UI/Vision, /UI/WebCfg: Module and system information on 'About' menu is updated.
- FIX:/Archive/FSArch: Stop value archivator is archivator db creation error.
- FIX:/Archive/FSArch: Check disabled archivator make is fixed.
- FIX:/DB/SQLite: Exeption generation on failed record deletion on readonly DB.


2008-09-18 Roman
- !!:/SYS: User's work directory support and user's start script 'openscada_start' added.
- FIX:/SYS: TSYS::setWorkDir() function is fixed.
- FIX:/SYS: RPM packages' build script is fixed for build into Hasher for ALTLinux Sisyphus repository.


2008-09-17 Maxim
- FIX:/UI/Vision: Deleting of fills for primitive ElFigure is fixed.


2008-09-17 Roman
- /DB/MySQL: For UTF codepages length multiplication to 2 for string is made.
- FIX:/UI/QTCfg: Save on exit is fixed.
- FIX:/SYS: Fixed DB fields set is fixed for TArchives, TBDS and TTransports.
- FIX:/SYS/Elements: Short DB fields length atribute is fixed.


2008-09-16 Roman
- FIX:/UI/VCAEngune: Two level and more widgets path generation is fixed.


2008-09-15 Roman
- !:/SYS: Self script 'mkdist' is added for fixed work 'make dist'.
- !:/SYS: RPM build spec file is updated for create noarch packages for ALTLinux.


2008-09-10 Roman OpenSCADA 0.6.2
- !!:/UI/QTStarter: Documentation and translation is updated and version 1.5.1 is relised.
- !!:/UI/QTCfg: Documentation and translation is updated and version 1.6.0 is relised.